# JustChord

./: .gitignore  .pyproject.toml  README.md  main.py  pyproject.toml  requirements.txt  update_logs.md
JustChord/: log.py
JustChord/core/: __init__.py  chord.py  config.py  constants.py  some_harmony_calculator.py  utils.py
JustChord/gui/: __init__.py  app.py  appwindow.py  basewidget.py  chordwindow.py  configviewer.py  gui.py  imports.py  keyboardwidget.py  mainwidget.py  monitor.py  staffwindow.py  wheelwindow.py  widget.py
data/: chords.jsonc  config.jsonc
justchord/: README.md  main.py  requirements.txt  update_logs.md
justchord/JustChord/: __init__.py
justchord/JustChord/core/: chord.py  constants.py  some_harmony_calculator.py
justchord/JustChord/gui/: __init__.py  chordwindow.py  gui.py  imports.py  keyboardwidget.py  mainwidget.py  monitor.py  staffwindow.py  wheelwindow.py
scripts/: check_config_coverage.py
